# milmil

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/: baseline.py
src/milmil/: __init__.py  datasets.py  types.py  utils.py  version.py
src/milmil/models/: __init__.py  alternating_optimization.py  base.py  instance_expansion.py
