[project]
name = "milmil"
version = "0.1.0"
description = ""
authors = [{ name = "杜世橋 Du Shiqiao", email = "lucidfrontier.45@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "autograd>=1.8.0",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
]

[project.scripts]
app = "app.cli:main"

[dependency-groups]
dev = [
    "poethepoet>=0.45.0",
    "pyrefly>=0.64.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.uv.build-backend]
module-name = ["app"]

[tool.poe.tasks]
ruff_check = "ruff check ."
ruff_fix = "ruff check --fix ."
ruff_format = "ruff format ."
pyrefly_check = "pyrefly check ."
check = ["ruff_check", "pyrefly_check"]
format = ["ruff_fix", "ruff_format"]
test = "pytest tests -n auto --cov=app --cov-report=term --cov-report=xml"

[tool.pytest.ini_options]
filterwarnings = ["ignore::FutureWarning"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "RUF",
    "UP",
    "N",
    "SIM",
    "A",
    "S",
    "DTZ",
    "PIE",
    "PLE",
]
# add directory names to exclude from analysis
exclude = ["tests/**/*", "deps/**/*"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ['F401']

[tool.pyrefly]
python-version = "3.13"
